fix: text overflowing outside load order info panel

--- a/src/stylesheets/vortex/page-mod-load-order.scss
+++ b/src/stylesheets/vortex/page-mod-load-order.scss
@@ -54,6 +54,7 @@
   #loadorderinfo {
     padding: 15px;
     height: 100%;
+    overflow: auto;
   }
   
   #mod-info {
